--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -118,7 +118,7 @@
 						<img src="{{ site.url }}/assets/img/ekspedisi-wahana.svg" alt="Wahana" width="130" height="40" class="object-contain mx-auto py-4" />
 						<img src="{{ site.url }}/assets/img/ekspedisi-pos.svg" alt="Pos" width="130" height="40" class="object-contain mx-auto py-4" /> -->						
 					</div>
-					<img src="{{ site.url }}/assets/img/ekspedisi-aman.jpeg" alt="Ekspedisi" width="800" height="152" />
+					<!-- <img src="{{ site.url }}/assets/img/ekspedisi-aman.jpeg" alt="Ekspedisi" width="800" height="152" /> -->
 				</div>
 			</footer>
 
