--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -92,10 +92,10 @@
 					<div class="flex flex-wrap max-w-[350px] mx-auto -mb-2">
 						<img src="{{ site.url }}/assets/img/payment-bca.svg" alt="BCA" width="120" height="30" class="object-contain mx-auto py-4" />
 						<img src="{{ site.url }}/assets/img/payment-dana.svg" alt="Dana" width="120" height="30" class="object-contain mx-auto py-4" />
-						<img src="{{ site.url }}/assets/img/payment-ovo.svg" alt="Ovo" width="120" height="30" class="object-contain mx-auto py-4" />
+						<!-- <img src="{{ site.url }}/assets/img/payment-ovo.svg" alt="Ovo" width="120" height="30" class="object-contain mx-auto py-4" />
 						<img src="{{ site.url }}/assets/img/payment-QRIS.svg" alt="QRIS" width="120" height="30" class="object-contain mx-auto py-4" />
 						<img src="{{ site.url }}/assets/img/payment-gopay.svg" alt="Gopay" width="120" height="30" class="object-contain mx-auto py-4" />
-						<!-- <img src="{{ site.url }}/assets/img/payment-bri.svg" alt="BRI" width="120" height="30" class="object-contain mx-auto py-4" />
+						<img src="{{ site.url }}/assets/img/payment-bri.svg" alt="BRI" width="120" height="30" class="object-contain mx-auto py-4" />
 						<img src="{{ site.url }}/assets/img/payment-bsi.svg" alt="BSI" width="120" height="30" class="object-contain mx-auto py-4" />
 						<img src="{{ site.url }}/assets/img/payment-bankjateng.svg" alt="Bank Jateng" width="120" height="30" class="object-contain mx-auto py-4" />
 						<img src="{{ site.url }}/assets/img/payment-maybank.svg" alt="Maybank" width="120" height="30" class="object-contain mx-auto py-4" />
@@ -107,18 +107,18 @@
 
 				<div class="py-10 px-4">
 					<p class="text-center mb-2">Pengiriman menggunakan:</p>
-					<div class="flex flex-wrap max-w-[500px] mx-auto -mb-2">
+					<!-- <div class="flex flex-wrap max-w-[500px] mx-auto -mb-2">
 						<img src="{{ site.url }}/assets/img/gofood-logo.svg" alt="GoFood" width="130" height="40" class="object-contain mx-auto py-4" />
 						<img src="{{ site.url }}/assets/img/grabfood-logo.svg" alt="GrabFood" width="130" height="40" class="object-contain mx-auto py-4" />
 						<img src="{{ site.url }}/assets/img/shopee-food-logo.svg" alt="Shopee Food" width="130" height="40" class="object-contain mx-auto py-4" />
-						<!-- <img src="{{ site.url }}/assets/img/ekspedisi-jne.svg" alt="JNE" width="130" height="40" class="object-contain mx-auto py-4" />
+						<img src="{{ site.url }}/assets/img/ekspedisi-jne.svg" alt="JNE" width="130" height="40" class="object-contain mx-auto py-4" />
 						<img src="{{ site.url }}/assets/img/ekspedisi-indahcargo.svg" alt="Indah Cargo" width="130" height="40" class="object-contain mx-auto py-4" />
 						<img src="{{ site.url }}/assets/img/ekspedisi-sicepat.svg" alt="SiCepat" width="130" height="40" class="object-contain mx-auto py-4" />
 						<img src="{{ site.url }}/assets/img/ekspedisi-tiki.svg" alt="TiKi" width="130" height="40" class="object-contain mx-auto py-4" />
 						<img src="{{ site.url }}/assets/img/ekspedisi-wahana.svg" alt="Wahana" width="130" height="40" class="object-contain mx-auto py-4" />
-						<img src="{{ site.url }}/assets/img/ekspedisi-pos.svg" alt="Pos" width="130" height="40" class="object-contain mx-auto py-4" /> -->						
-					</div>
-					<!-- <img src="{{ site.url }}/assets/img/ekspedisi-aman.jpeg" alt="Ekspedisi" width="800" height="152" /> -->
+						<img src="{{ site.url }}/assets/img/ekspedisi-pos.svg" alt="Pos" width="130" height="40" class="object-contain mx-auto py-4" />						
+					</div> -->
+					<img src="{{ site.url }}/assets/img/ekspedisi-aman.jpeg" alt="Ekspedisi" width="800" height="152" />
 				</div>
 			</footer>
 
