--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -106,7 +106,7 @@
 				</div>
 
 				<div class="py-10 px-4">
-					<p class="text-center mb-2">Pengiriman menggunakan:</p>
+					<!-- <p class="text-center mb-2">Pengiriman menggunakan:</p> -->
 					<!-- <div class="flex flex-wrap max-w-[500px] mx-auto -mb-2">
 						<img src="{{ site.url }}/assets/img/gofood-logo.svg" alt="GoFood" width="130" height="40" class="object-contain mx-auto py-4" />
 						<img src="{{ site.url }}/assets/img/grabfood-logo.svg" alt="GrabFood" width="130" height="40" class="object-contain mx-auto py-4" />
