--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -106,9 +106,11 @@
 				</div>
 
 				<div class="py-10 px-4">
-					<!-- <p class="text-center mb-2">Pengiriman menggunakan:</p> -->
-					<!-- <div class="flex flex-wrap max-w-[500px] mx-auto -mb-2">
-						<img src="{{ site.url }}/assets/img/gofood-logo.svg" alt="GoFood" width="130" height="40" class="object-contain mx-auto py-4" />
+					<p class="text-center mb-2">Pengiriman menggunakan:</p>
+					<div class="flex flex-wrap max-w-[500px] mx-auto -mb-2">
+						<img src="{{ site.url }}/assets/img/GrabExpress-logo.svg" alt="GoFood" width="130" height="40" class="object-contain mx-auto py-4" />
+						<img src="{{ site.url }}/assets/img/GoSend-logo.svg" alt="GoFood" width="130" height="40" class="object-contain mx-auto py-4" />
+						<!-- <img src="{{ site.url }}/assets/img/gofood-logo.svg" alt="GoFood" width="130" height="40" class="object-contain mx-auto py-4" />
 						<img src="{{ site.url }}/assets/img/grabfood-logo.svg" alt="GrabFood" width="130" height="40" class="object-contain mx-auto py-4" />
 						<img src="{{ site.url }}/assets/img/shopee-food-logo.svg" alt="Shopee Food" width="130" height="40" class="object-contain mx-auto py-4" />
 						<img src="{{ site.url }}/assets/img/ekspedisi-jne.svg" alt="JNE" width="130" height="40" class="object-contain mx-auto py-4" />
@@ -116,8 +118,8 @@
 						<img src="{{ site.url }}/assets/img/ekspedisi-sicepat.svg" alt="SiCepat" width="130" height="40" class="object-contain mx-auto py-4" />
 						<img src="{{ site.url }}/assets/img/ekspedisi-tiki.svg" alt="TiKi" width="130" height="40" class="object-contain mx-auto py-4" />
 						<img src="{{ site.url }}/assets/img/ekspedisi-wahana.svg" alt="Wahana" width="130" height="40" class="object-contain mx-auto py-4" />
-						<img src="{{ site.url }}/assets/img/ekspedisi-pos.svg" alt="Pos" width="130" height="40" class="object-contain mx-auto py-4" />						
-					</div> -->
+						<img src="{{ site.url }}/assets/img/ekspedisi-pos.svg" alt="Pos" width="130" height="40" class="object-contain mx-auto py-4" /> -->
+					</div>
 					<img src="{{ site.url }}/assets/img/ekspedisi-aman.jpeg" alt="Ekspedisi" width="800" height="152" />
 				</div>
 			</footer>
