--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -88,7 +88,7 @@
 				</button>
 
 				<div class="bg-zinc-100 py-10 px-4 mt-7">
-					<p class="text-center mb-2">Melayani pembayaran melalui:</p>
+					<p class="text-center mb-2"><b>Melayani pembayaran melalui:</b></p>
 					<div class="flex flex-wrap max-w-[350px] mx-auto -mb-2">
 						<img src="{{ site.url }}/assets/img/payment-bca.svg" alt="BCA" width="120" height="30" class="object-contain mx-auto py-4" />
 						<img src="{{ site.url }}/assets/img/payment-dana.svg" alt="Dana" width="120" height="30" class="object-contain mx-auto py-4" />
@@ -106,10 +106,10 @@
 				</div>
 
 				<div class="py-10 px-4">
-					<p class="text-center mb-2">Pengiriman menggunakan:</p>
+					<p class="text-center mb-2"><b>Pengiriman menggunakan:</b></p>
 					<div class="flex flex-wrap max-w-[500px] mx-auto -mb-2">
-						<img src="{{ site.url }}/assets/img/GrabExpress-logo.svg" alt="GoFood" width="130" height="40" class="object-contain mx-auto py-4" />
-						<img src="{{ site.url }}/assets/img/GoSend-logo.svg" alt="GoFood" width="130" height="40" class="object-contain mx-auto py-4" />
+						<img src="{{ site.url }}/assets/img/GrabExpress-logo.svg" alt="GrabExpress" width="50" height="50" class="object-contain mx-auto py-4" />
+						<img src="{{ site.url }}/assets/img/GoSend-logo.svg" alt="GoSend" width="50" height="50" class="object-contain mx-auto py-4" />
 						<!-- <img src="{{ site.url }}/assets/img/gofood-logo.svg" alt="GoFood" width="130" height="40" class="object-contain mx-auto py-4" />
 						<img src="{{ site.url }}/assets/img/grabfood-logo.svg" alt="GrabFood" width="130" height="40" class="object-contain mx-auto py-4" />
 						<img src="{{ site.url }}/assets/img/shopee-food-logo.svg" alt="Shopee Food" width="130" height="40" class="object-contain mx-auto py-4" />
