--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -108,8 +108,8 @@
 				<div class="py-10 px-4">
 					<p class="text-center mb-2"><b>Pengiriman menggunakan:</b></p>
 					<div class="flex flex-wrap max-w-[500px] mx-auto -mb-2">
-						<img src="{{ site.url }}/assets/img/GrabExpress-logo.svg" alt="GrabExpress" width="100%" height="40" class="object-contain mx-auto py-4" />
-						<img src="{{ site.url }}/assets/img/GoSend-logo.svg" alt="GoSend" width="100%" height="40" class="object-contain mx-auto py-4" />
+						<img src="{{ site.url }}/assets/img/GrabExpress-logo.svg" alt="GrabExpress" width="130" height="40" class="object-contain mx-auto py-4" />
+						<img src="{{ site.url }}/assets/img/GoSend-logo.svg" alt="GoSend" width="130" height="40" class="object-contain mx-auto py-4" />
 						<!-- <img src="{{ site.url }}/assets/img/gofood-logo.svg" alt="GoFood" width="130" height="40" class="object-contain mx-auto py-4" />
 						<img src="{{ site.url }}/assets/img/grabfood-logo.svg" alt="GrabFood" width="130" height="40" class="object-contain mx-auto py-4" />
 						<img src="{{ site.url }}/assets/img/shopee-food-logo.svg" alt="Shopee Food" width="130" height="40" class="object-contain mx-auto py-4" />
