--- a/_includes/locked.html
+++ b/_includes/locked.html
@@ -3,8 +3,8 @@
  <div class="popup">
   <h2>⚠️ Mohon Maaf!</h2>
   <p>Untuk sementara laman ini tidak dapat diakses.</p>
-  <p>Jika Anda adalah pemilik laman ini, silakan hubungi <span>admin@orderio.id</span></p>
-  <a href="mailto:admin@orderio.id" class="button">Hubungi Sekarang</a>
+  <p>Jika Anda adalah pemilik laman ini, silakan hubungi <span>admin@orderio.my.id</span></p>
+  <a href="mailto:admin@orderio.my.id" class="button">Hubungi Sekarang</a>
  </div>
 </div>
 {% endif %}
