--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,7 +47,7 @@
 				{{ content }}
 			<section class="powered max-w-[600px]">
 			 <div>
-				 <b>Powered by</b> <a href="https://orderio.id/" target="_blank"><b>Orderio.id</b></a>
+				 <b>Powered by</b> <a href="https://orderio.my.id/" target="_blank"><b>Orderio.my.id</b></a>
 			 </div>
 			 <style>
 			  .powered {
